--- a/contact.html
+++ b/contact.html
@@ -648,7 +648,7 @@ write a message....</textarea
           <div class="row row align-items-center">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
               <div class="copyright__left copyright__left--2">
-                <p>
+                <p style="line-height: 20px;">
                   Copyright © 2024 <a href="#">BIOSPARK ENERGY.</a> All Right
                   Reserved
                 </p>
