--- a/LFOM.html
+++ b/LFOM.html
@@ -10,8 +10,9 @@
     <!-- Canonical Tag -->
     <link rel="canonical" href="https://biosparkenergy.com/LFOM.html">
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/x-icon" href="img/biospark.png" />
+    
 
     <!-- CSS files -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
