--- a/about.html
+++ b/about.html
@@ -10,20 +10,13 @@
     <meta name="keywords" content="BioSpark Energy, About Us, Renewable Energy, Sustainable Energy, Green Solutions, Clean Energy" />
     <meta name="author" content="BioSpark Energy" />
 
-    <!-- Open Graph Meta Tags for Social Media Sharing -->
-    <meta property="og:title" content="About Us | BioSpark Energy" />
-    <meta property="og:description" content="Discover the mission and vision behind BioSpark Energy, leading the way in sustainable energy." />
-    <meta property="og:url" content="https://biosparkenergy.com/about.html" />
-    <meta property="og:image" content="https://biosparkenergy.com/img/about-og-image.jpg" />
-    <meta property="og:type" content="website" />
-
-
 
     <!-- Canonical Tag -->
     <link rel="canonical" href="https://biosparkenergy.com/about.html" />
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+   <!-- Favicon -->
+   <link rel="shortcut icon" type="image/x-icon" href="img/biospark.png" />
+    
     
     <!-- CSS Links -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
