--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,9 @@
     <!-- Canonical Tag --> 
     <link rel="canonical" href="https://biosparkenergy.com/contact.html" />
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+   <!-- Favicon -->
+   <link rel="shortcut icon" type="image/x-icon" href="img/biospark.png" />
+    
     
     <!-- CSS Links -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
