--- a/CBG.html
+++ b/CBG.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Compressed Biogas (CBG) | Bio Spark Energy</title>
+    <title>Compressed Biogas (CBG) | Biospark Energy</title>
     <meta name="description" content="Bio Spark Energy produces Compressed Biogas (CBG), a sustainable and renewable energy source derived from organic waste, providing a cleaner alternative to fossil fuels." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -11,7 +11,8 @@
     <link rel="canonical" href="https://biosparkenergy.com/CBG.html">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="img/biospark.png" />
+    
 
     <!-- CSS files -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
