--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="https://biosparkenergy.com" />
     
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/biospark.png" />
     
     <!-- CSS Links -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
