--- a/products.html
+++ b/products.html
@@ -10,20 +10,14 @@
     <meta name="keywords" content="BioSpark Energy, Renewable Energy Products, Clean Energy Solutions, Solar Products, Wind Energy, Green Energy" />
     <meta name="author" content="BioSpark Energy" />
 
-    <!-- Open Graph Meta Tags for Social Media Sharing -->
-    <meta property="og:title" content="Products | BioSpark Energy" />
-    <meta property="og:description" content="Browse BioSpark Energy's selection of renewable energy products and solutions for a sustainable future." />
-    <meta property="og:url" content="https://biosparkenergy.com/products.html" />
-    <meta property="og:image" content="https://biosparkenergy.com/img/products-og-image.jpg" />
-    <meta property="og:type" content="website" />
-
 
 
     <!-- Canonical Tag -->
     <link rel="canonical" href="https://biosparkenergy.com/products.html" />
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/x-icon" href="img/biospark.png" />
+    
     
     <!-- CSS Links -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
