--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
               <div class="headerarea__component__wrap">
                 <div class="headerarea__component">
                   <div class="headerarea__logo">
-                    <a href="index.html">
+                    <a href="/">
                       <span
                         class="fs-4 text-white fw-bold"
                         style="letter-spacing: 2px"
@@ -58,7 +58,7 @@
                   <div class="headerarea__main__menu">
                     <nav>
                       <ul>
-                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="/">HOME</a></li>
                         <li><a href="products.html">PRODUCTS</a></li>
                         <li><a href="about.html">ABOUT </a></li>
                         <li><a href="contact.html">CONTACT </a></li>
@@ -108,8 +108,8 @@
               </div>
               <div class="mobile__log">
                 <div class="mobile__log--title">
-                  <a class="mobile__log--link" href="index.html">
-                    <a href="index.html">
+                  <a class="mobile__log--link" href="/">
+                    <a href="/">
                       <span
                         class="text-light fw-bold"
                         style="letter-spacing: 2px"
@@ -139,7 +139,7 @@
       <div class="offcanvas__header">
         <div class="offcanvas__inner">
           <div class="offcanvas__logo">
-            <a href="index.html">
+            <a href="/">
               <span class="fs-5 text-dark fw-bold" style="letter-spacing: 2px"
                 >BIOSPARK ENERGY</span
               >
@@ -149,7 +149,7 @@
           <nav class="offcanvas__menu">
             <ul class="offcanvas__menu_ul">
               <li class="offcanvas__menu_li">
-                <a class="offcanvas__menu_item" href="index.html">Home</a>
+                <a class="offcanvas__menu_item" href="/">Home</a>
               </li>
               <li class="offcanvas__menu_li">
                 <a class="offcanvas__menu_item" href="products.html"
@@ -182,7 +182,7 @@
                 </div>
                 <div class="breadcrumbarea__inner">
                   <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li>//</li>
                     <li>Products</li>
                   </ul>
@@ -455,7 +455,7 @@
               >
                 <div class="footer__widget footer__left">
                   <div class="footer__logo">
-                    <a href="index.html">
+                    <a href="/">
                       <span
                         class="fs-4 text-dark fw-bold"
                         style="letter-spacing: 2px"
