Add Login BIn navigation

--- a/FOM.html
+++ b/FOM.html
@@ -56,6 +56,7 @@
                           <li><a href="products.html">PRODUCTS</a></li>
                           <li><a href="about.html">ABOUT </a></li>
                           <li><a href="contact.html">CONTACT </a></li>
+                          <li><a href="http://login.biosparkenergy.com/">LOGIN </a></li>
                         </ul>
                       </nav>
                     </div>
@@ -63,12 +64,15 @@
                   <div class="headerarea__component">
                     <div class="headerarea__right">
                       <div class="headerarea__button">
-                        <a class="default__button btn__white" href="https://wa.me/7310914512"
+                        <a
+                          class="default__button btn__white"
+                          href="https://wa.me/7310914512"
                           >CONTACT US</a
                         >
                       </div>
                     </div>
                   </div>
+                  
                 </div>
               </div>
             </div>
@@ -115,7 +119,9 @@
                 <div class="headerarea__component mobile__component__right">
                   <div class="headerarea__right">
                     <div class="headerarea__button">
-                      <a class="default__button" href="https://wa.me/7310914512">CONTACT</a>
+                      <a class="default__button" href="https://wa.me/7310914512"
+                        >CONTACT</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -142,7 +148,9 @@
                   <a class="offcanvas__menu_item" href="/">Home</a>
                 </li>
                 <li class="offcanvas__menu_li">
-                  <a class="offcanvas__menu_item" href="products.html">Products</a>
+                  <a class="offcanvas__menu_item" href="products.html"
+                    >Products</a
+                  >
                 </li>
                 <li class="offcanvas__menu_li">
                   <a class="offcanvas__menu_item" href="about.html">About</a>
@@ -150,13 +158,15 @@
                 <li class="offcanvas__menu_li">
                   <a class="offcanvas__menu_item" href="contact.html">Contact</a>
                 </li>
+                <li class="offcanvas__menu_li">
+                  <a class="offcanvas__menu_item" href="http://login.biosparkenergy.com/">LOGIN</a>
+                </li>
               </ul>
             </nav>
           </div>
         </div>
         <!-- End Offcanvas header menu -->
   
-
       <!-- breadcrumbarea__start -->
       <div
         class="breadcrumbarea"
