--- a/contact.html
+++ b/contact.html
@@ -31,140 +31,145 @@
 
   <body class="body__wrapper">
     <main class="main_wrapper overflow-hidden">
-      <!-- header__start -->
-      <header>
-        <div
-          class="headerarea headerarea--2 headerarea__transparent headerarea__display__none header__sticky"
-        >
-          <div class="container desktop__menu__wrapper">
-            <div
-              class="headerarea__main__wrapper headerarea__main__wrapper--2 position-relative"
-            >
-              <div class="headerarea__component__wrap">
-                <div class="headerarea__component">
-                  <div class="headerarea__logo">
-                    <a href="/">
-                      <span
-                        class="fs-4 text-white fw-bold"
-                        style="letter-spacing: 2px"
-                        >BIOSPARK ENERGY</span
-                      >
-                    </a>
-                  </div>
-                </div>
-                <div class="headerarea__component">
-                  <div class="headerarea__main__menu">
-                    <nav>
-                      <ul>
-                        <li><a href="/">HOME</a></li>
-                        <li><a href="products.html">PRODUCTS</a></li>
-                        <li><a href="about.html">ABOUT </a></li>
-                        <li><a href="contact.html">CONTACT </a></li>
-                      </ul>
-                    </nav>
-                  </div>
-                </div>
-                <div class="headerarea__component">
-                  <div class="headerarea__right">
-                    <div class="headerarea__button">
-                      <a
-                        class="default__button btn__white"
-                        href="https://wa.me/7310914512"
-                        >CONTACT US</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="mob_menu_wrapper container-fluid">
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="offcanvas__header--menu__open">
-                <a
-                  class="offcanvas__header--menu__open--btn"
-                  href="javascript:void(0)"
-                  data-offcanvas
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="ionicon offcanvas__header--menu__open--svg"
-                    viewBox="0 0 512 512"
-                  >
-                    <path
-                      fill="currentColor"
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-miterlimit="10"
-                      stroke-width="32"
-                      d="M80 160h352M80 256h352M80 352h352"
-                    />
-                  </svg>
-                  <span class="visually-hidden">Offcanvas Menu Open</span>
-                </a>
-              </div>
-              <div class="mobile__log">
-                <div class="mobile__log--title">
-                  <a class="mobile__log--link" href="/">
-                    <a href="/">
-                      <span
-                        class="text-light fw-bold"
-                        style="letter-spacing: 2px"
-                        >BIOSPARK ENERGY</span
-                      >
-                    </a>
+    <!-- header__start -->
+    <header>
+      <div
+        class="headerarea headerarea--2 headerarea__transparent headerarea__display__none header__sticky"
+      >
+        <div class="container desktop__menu__wrapper">
+          <div
+            class="headerarea__main__wrapper headerarea__main__wrapper--2 position-relative"
+          >
+            <div class="headerarea__component__wrap">
+              <div class="headerarea__component">
+                <div class="headerarea__logo">
+                  <a href="/">
+                    <span
+                      class="fs-4 text-white fw-bold"
+                      style="letter-spacing: 2px"
+                      >BIOSPARK ENERGY</span
+                    >
                   </a>
                 </div>
               </div>
-
-              <div class="headerarea__component mobile__component__right">
+              <div class="headerarea__component">
+                <div class="headerarea__main__menu">
+                  <nav>
+                    <ul>
+                      <li><a href="/">HOME</a></li>
+                      <li><a href="products.html">PRODUCTS</a></li>
+                      <li><a href="about.html">ABOUT </a></li>
+                      <li><a href="contact.html">CONTACT </a></li>
+                      <li><a href="http://login.biosparkenergy.com/">LOGIN </a></li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="headerarea__component">
                 <div class="headerarea__right">
                   <div class="headerarea__button">
-                    <a class="default__button" href="https://wa.me/7310914512"
-                      >CONTACT</a
+                    <a
+                      class="default__button btn__white"
+                      href="https://wa.me/7310914512"
+                      >CONTACT US</a
                     >
                   </div>
                 </div>
               </div>
+              
             </div>
           </div>
         </div>
-      </header>
-      <!-- header__end -->
 
-      <!-- Start Offcanvas header menu -->
-      <div class="offcanvas__header">
-        <div class="offcanvas__inner">
-          <div class="offcanvas__logo">
-            <a href="/">
-              <span class="fs-5 text-dark fw-bold" style="letter-spacing: 2px"
-                >BIOSPARK ENERGY</span
+        <div class="mob_menu_wrapper container-fluid">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="offcanvas__header--menu__open">
+              <a
+                class="offcanvas__header--menu__open--btn"
+                href="javascript:void(0)"
+                data-offcanvas
               >
-            </a>
-            <button class="offcanvas__close--btn" data-offcanvas>Close</button>
-          </div>
-          <nav class="offcanvas__menu">
-            <ul class="offcanvas__menu_ul">
-              <li class="offcanvas__menu_li">
-                <a class="offcanvas__menu_item" href="/">Home</a>
-              </li>
-              <li class="offcanvas__menu_li">
-                <a class="offcanvas__menu_item" href="products.html"
-                  >Products</a
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="ionicon offcanvas__header--menu__open--svg"
+                  viewBox="0 0 512 512"
                 >
-              </li>
-              <li class="offcanvas__menu_li">
-                <a class="offcanvas__menu_item" href="about.html">About</a>
-              </li>
-              <li class="offcanvas__menu_li">
-                <a class="offcanvas__menu_item" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </nav>
+                  <path
+                    fill="currentColor"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-miterlimit="10"
+                    stroke-width="32"
+                    d="M80 160h352M80 256h352M80 352h352"
+                  />
+                </svg>
+                <span class="visually-hidden">Offcanvas Menu Open</span>
+              </a>
+            </div>
+            <div class="mobile__log">
+              <div class="mobile__log--title">
+                <a class="mobile__log--link" href="/">
+                  <a href="/">
+                    <span
+                      class="text-light fw-bold"
+                      style="letter-spacing: 2px"
+                      >BIOSPARK ENERGY</span
+                    >
+                  </a>
+                </a>
+              </div>
+            </div>
+
+            <div class="headerarea__component mobile__component__right">
+              <div class="headerarea__right">
+                <div class="headerarea__button">
+                  <a class="default__button" href="https://wa.me/7310914512"
+                    >CONTACT</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- End Offcanvas header menu -->
+    </header>
+    <!-- header__end -->
+
+    <!-- Start Offcanvas header menu -->
+    <div class="offcanvas__header">
+      <div class="offcanvas__inner">
+        <div class="offcanvas__logo">
+          <a href="/">
+            <span class="fs-5 text-dark fw-bold" style="letter-spacing: 2px"
+              >BIOSPARK ENERGY</span
+            >
+          </a>
+          <button class="offcanvas__close--btn" data-offcanvas>Close</button>
+        </div>
+        <nav class="offcanvas__menu">
+          <ul class="offcanvas__menu_ul">
+            <li class="offcanvas__menu_li">
+              <a class="offcanvas__menu_item" href="/">Home</a>
+            </li>
+            <li class="offcanvas__menu_li">
+              <a class="offcanvas__menu_item" href="products.html"
+                >Products</a
+              >
+            </li>
+            <li class="offcanvas__menu_li">
+              <a class="offcanvas__menu_item" href="about.html">About</a>
+            </li>
+            <li class="offcanvas__menu_li">
+              <a class="offcanvas__menu_item" href="contact.html">Contact</a>
+            </li>
+            <li class="offcanvas__menu_li">
+              <a class="offcanvas__menu_item" href="http://login.biosparkenergy.com/">LOGIN</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <!-- End Offcanvas header menu -->
 
       <!-- breadcrumbarea__start -->
       <div
