--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <li><a href="products.html">PRODUCTS</a></li>
                         <li><a href="about.html">ABOUT </a></li>
                         <li><a href="contact.html">CONTACT </a></li>
+                        <li><a href="http://login.biosparkenergy.com/">LOGIN </a></li>
                       </ul>
                     </nav>
                   </div>
@@ -74,6 +75,7 @@
                     </div>
                   </div>
                 </div>
+                
               </div>
             </div>
           </div>
@@ -158,6 +160,9 @@
               </li>
               <li class="offcanvas__menu_li">
                 <a class="offcanvas__menu_item" href="contact.html">Contact</a>
+              </li>
+              <li class="offcanvas__menu_li">
+                <a class="offcanvas__menu_item" href="http://login.biosparkenergy.com/">LOGIN</a>
               </li>
             </ul>
           </nav>
